--- a/TextMacroIntent/TextMacroIntentProg/TextMacroIntentProg.csproj
+++ b/TextMacroIntent/TextMacroIntentProg/TextMacroIntentProg.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>TextMacroIntentProg.Prog_QuickDemo</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
